# GLitch

./: CMakeLists.txt
include/: Shader.hpp  Texture.hpp
src/: Shader.cpp  Texture.cpp
